<resources>
    <string name="app_name">DMV Buddy</string>
    <string name="user_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="signin">Sign In</string>
    <string name="update">Update Wait Time</string>
    <string name="number_pulled">Number Pulled</string>
    <string name="number_serving">Number Serving</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="logout">Logout</string>
</resources>
