<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".ui.LoginActivity">



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameWrapper"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/username"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/user_hint"
            android:textColor="@color/primary_light"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordWrapper"
        android:layout_below="@+id/usernameWrapper"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:hint="@string/pass_hint"
            android:textColor="@color/primary_light"
          />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:id="@+id/submit"
        android:text="@string/signin"
        android:layout_below="@+id/passwordWrapper"
        android:background="@color/primary_light"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/submit"
        android:textColor="@color/icons"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/don_t_have_an_account_sign_up_here"
        android:id="@+id/registerTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textColor="@color/primary_light"
        android:layout_above="@+id/usernameWrapper"
        android:layout_centerHorizontal="true"
        android:textSize="65sp"
        android:layout_marginBottom="60dp"/>


</RelativeLayout>
