<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.DMVBuddy.ui.SignUpActivity"
    android:background="@color/primary_dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameWrapper"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/primary_light"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameWrapper"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:padding="10dp"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:textColor="@color/primary_light"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailWrapper"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/primary_light"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordWrapper"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:typeface="normal"
                android:layout_marginBottom="10dp"
                android:textColor="@color/primary_light"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordConfWrapper"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="normal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/primary_light"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:background="@color/primary_light"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/icons"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/already_have_an_account_log_in_here"
            android:id="@+id/loginTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/primary_light"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

